Init Commit: Prevent Fetching From 5 - 22. Scrolling Works but still need to check overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -177,11 +177,7 @@ a {
 }
 
 .logo {
-<<<<<<< HEAD
-  height: 9rem;
-=======
   height: 11rem;
->>>>>>> 6440f8dd5e1ef5114caa143780a99da222ef1791
   object-fit: contain;
   object-position: right;
 }
